force-app/main/default/objects/Uni_Student__c/Uni_Student__c.object-meta.xml
<CustomObject>
    <label>Uni Student</label>
    <nameField>
        <displayFormat>STU-{0000}</displayFormat>
        <label>Student ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Uni Students</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>