force-app/main/default/objects/Uni_Student__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>FLOOR((TODAY() -  DOB__c ) / 365 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>