force-app/main/default/objects/Uni_Student__c/fields/student__c.field-meta.xml
<CustomField>
    <fullName>student__c</fullName>
    <label>student-admission</label>
    <summaryForeignKey>Admission__c.Student__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>