force-app/main/default/objects/Uni_Student__c/recordTypes/Non_Technical.recordType-meta.xml
<RecordType>
    <fullName>Non_Technical</fullName>
    <active>true</active>
    <description>record type for non technical picklist</description>
    <label>Non Technical</label>
</RecordType>